# murxla

./: .clang-format  .gitmodules  AUTHORS  CMakeLists.txt  README-dev.md  README.md  scribbles.cpp  setup-deps.sh
.github/workflows/: ci.yml
cmake/: CodeCoverage.cmake  FindBoolector.cmake  FindCVC4.cmake  FindSphinx.cmake  FindYices.cmake  Helpers.cmake  json.cmake
docs/: CMakeLists.txt  conf.py.in  gen-cli-options.py  index.rst  install.rst  operator.rst  solver.rst  solver_integration.rst  solver_manager.rst  solver_option.rst  solver_profile.rst  solver_wrapper.rst  sort_kind.rst  theory.rst  usage.rst  user_guide.rst
docs/_static/: custom.css
docs/advanced/: advanced.rst  exceptions.rst  operator.rst  operator_kinds.rst  solver_manager.rst  solver_option.rst  sort_kind.rst  special_value_kinds.rst  theory.rst
docs/advanced/fsm/: action.rst  fsm.rst  index.rst  state.rst
docs/advanced/solver_wrapper_interface/: abssort.rst  solver.rst  solver_wrapper_interface.rst
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/ext/: smtliblexer.py  tracelexer.py
docs/fsm/: action.rst  fsm.rst  state.rst
docs/solver/: CMakeLists.txt  Doxyfile.in  abssort.rst  absterm.rst  solver.rst
docs/solver_integration/: abssort_overrides.rst  absterm_overrides.rst  solver_integration.rst  solver_overrides.rst  solver_profile.rst
docs/solver_integration/solver_wrapper/: abssort.rst  abssort_overrides.rst  absterm.rst  absterm_overrides.rst  overrides.rst  solver_overrides.rst  solver_wrapper.rst  sort.rst  term.rst
docs/tikz/: fuzzer.tex  makefile  murxla.tex
scripts/: setup-solvers.sh
src/: CMakeLists.txt  TODO_btor  TODO_cvc4  action.cpp  action.hpp  btor_actions.cpp  btor_actions.hpp  btor_solver.cpp  btor_solver.hpp  btor_solver_manager.cpp  btor_solver_manager.hpp  bzla_solver.cpp  bzla_solver.hpp  cbzla_solver.cpp  cbzla_solver.hpp  check_solver.cpp  check_solver.hpp  config.hpp  cross_check_solver.cpp  cross_check_solver.hpp  cvc4_actions.cpp  cvc4_actions.hpp  cvc4_solver.cpp  cvc4_solver.hpp  cvc4_solver_manager.cpp  cvc4_solver_manager.hpp  cvc5_solver.cpp  cvc5_solver.hpp  dd.cpp  dd.hpp  except.cpp  except.hpp  exit.hpp  fs.hpp  fsm.cpp  fsm.hpp  main.cpp  murxla.cpp  murxla.hpp  op.cpp  (+28 more)
src/btor/: gen_btor_options.cpp
src/cvc4/: gen_cvc4_options.cpp
src/solver/: solver.cpp  solver.hpp  solver_profile.cpp  solver_profile.hpp  tracer.hpp
src/solver/bitwuzla/: bitwuzla_solver.cpp  bitwuzla_solver.hpp  profile.json
src/solver/btor/: btor_solver.cpp  btor_solver.hpp  profile.json
src/solver/bzla/: bzla_solver.cpp  bzla_solver.hpp  profile.json
src/solver/cvc5/: cvc5_solver.cpp  cvc5_solver.hpp  cvc5_tracer.cpp  cvc5_tracer.hpp  profile.json
src/solver/meta/: check_solver.cpp  check_solver.hpp  shadow_solver.cpp  shadow_solver.hpp
src/solver/smt2/: profile.json  smt2_solver.cpp  smt2_solver.hpp
src/solver/yices/: profile.json  yices_solver.cpp  yices_solver.hpp
test/: CMakeLists.txt  main.cpp  test_util.cpp
